# optimization-and-forecasting-models

./: Readme.md  pyproject.toml  requirements.txt
notebooks/: 01_linear_programming_resource_allocation.ipynb  02_nonlinear_optimization_capacity_planning.ipynb  03_time_series_demand_forecasting.ipynb
src/api/: __init__.py  explain.py  main.py
src/data/: __init__.py  loaders.py  synthetic_generators.py
src/forecasting/: __init__.py  demand_forecasting.py  evaluation.py  time_series_models.py
src/optimization/: __init__.py  linear_programming.py  nonlinear_optimization.py  resource_allocation.py  scheduling_models.py
src/utils/: __init__.py  metrics.py  plotting.py
tests/: test_linear_programming.py  test_metrics.py  test_synthetic_generators.py  test_time_series_models.py
