[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "optimization-and-forecasting-models"
version = "0.1.0"
description = "Reusable library of optimization and time-series forecasting models for decision-support workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Your Name", email = "you@example.com" },
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scipy>=1.11",
  "scikit-learn>=1.3",
  "matplotlib>=3.8",
  "statsmodels>=0.14",
  "pulp>=2.8",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "black>=23.7",
  "ruff>=0.1.0",
  "jupyter>=1.0",
]

[project.urls]
Homepage = "https://example.com/optimization-and-forecasting-models"
Repository = "https://example.com/optimization-and-forecasting-models.git"
